k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  selector:
    matchLabels:
      app: api
      role: web
  template:
    metadata:
      labels:
        app: api
        role: web
    spec:
      containers:
      - image: registry.openculinary.org/reciperadar/api
        imagePullPolicy: IfNotPresent
        name: api
        ports:
        - containerPort: 8000
        securityContext:
          readOnlyRootFilesystem: true
        volumeMounts:
          - mountPath: /var/tmp
            name: var-tmp
      volumes:
        - name: var-tmp
          emptyDir:
            medium: "Memory"
            sizeLimit: "128Mi"
