k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  selector:
    app: api
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
