k8s/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 4m
spec:
  rules:
  - host: api
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: api-service
            port:
              number: 80
